2017-05-01	"leavedos(Interp86|3056) called - shutting down"

		configure :
		- now tests for syscall(...) host-side, and syscall(...),
		  getpid(), getppid(), and kill(...) target-side

		GNUmakefile :
		- now tests for syscall(...) host-side, and syscall(...),
		  getpid(), getppid(), and kill(...) target-side
		- added test-kthxbai-p test case to ia16-elf tests

		include/innocent-pear/yarly.h :
		- now reduces scrambling layers when compiling for ia16-elf

		include/innocent-pear/bbq.h :
		- added definitions of internal macros innocent_pear_X86_
		  PREFIX(.) and innocent_pear_X86_BR_PREFIX(.) for ia16-elf

		include/innocent-pear/kthxbai.h :
		- now implements kthxbai_impl<, , , 0u> for ia16-elf

		include/innocent-pear/rofl.h ,
		include/innocent-pear/omg.h ,
		include/innocent-pear/unpossible.h :
		- now tests for syscall(...), getpid(), getppid(), and
		  kill(...)

		lolwutconf/ :
		- bumped to c71c870347

		infra/lolwutconf.tar.xz :
		- updated

2017-04-30	Towards ia16-elf-g++...  "../test/test-orly-1.cc:31:1:
		internal compiler error: Max. number of generated reload
		insns per insn is achieved (90)"

		configure :
		- now tests if mmap(...) is implemented and if ioctl(...),
		  munmap(...), and/or mprotect(...) are defined

		GNUmakefile :
		- now uses $(conf_Host_exe_ext) and $(conf_Target_exe_ext)
		- now disables most test cases for ia16-elf target
		- now writes results of ioctl(...), mmap(...), munmap(...),
		  and mprotect(...) tests to $(config.h.target)
		- now compiles front-end code with innocent_pear_HOST_EXE_EXT
		  defined

		include/innocent-pear/rofl.h :
		- rofl<...>::open(...) fallback implementation now explicitly
		  refers to &::open rather than &open, and so on
		- fixed fallback implementation of rofl<...>::memset(.)
		- each of ioctl(...), mmap(...), munmap(...), and mprotect
		  (...) in rofl<...> now gives ENOSYS if undefined or
		  unimplemented
		- rofl<...>::mmap(...) now uses (void *)-1 if MAP_FAILED is
		  absent
